# autoresearch_remotion_finetune

./: .gitignore  README.md  pyproject.toml
configs/: local_mlx_latency_benchmark.json  openrouter_frontier_remotion.json  openrouter_remotion_xiaomi_gptmini_fixed_eval.json  qwen25coder_3b_remotion.json
data/: remotion_codex_synthetic_cases.jsonl  remotion_seed_cases.json
docs/: dataset-strategy.md  eval-and-rendering.md  manim-transfer-open-improvements.md  prompt-template.md  rating-workflow.md
remotion_pipeline/: __init__.py  benchmark.py  benchmark_prompting.py  candidate_generation.py  candidate_quality.py  case_records.py  cli.py  cli_candidates.py  cli_latency.py  compare.py  dataset.py  dataset_card.py  dataset_sources.py  dynamic_stop.py  eval.py  generation_quality.py  hf_dataset.py  latency_benchmark.py  license_metadata.py  local_inference.py  local_inference_cli.py  local_inference_types.py  mlx.py  openrouter.py  rating.py  render_check.py  retry_eval.py  retry_profiles.py  source_verifier.py  style_prompts.py  synthetic_dataset.py  target_generation.py  types.py  utils.py
runner/: package.json  tsconfig.json
scripts/: build_codex_synthetic_dataset.py  build_fixed_eval_dataset.py  build_prompt_eval_dataset.py  build_style_prompt_bank.py  export_prompt_history_to_cases.py  generate_verified_remotion.py  merge_verified_candidates.py  rescore_generation_artifact.py  run_quality_speed_sweep.py  run_verified_retry_eval.py
tests/: test_build_prompt_eval_dataset.py  test_candidate_generation.py  test_case_records.py  test_dynamic_stop.py  test_rating.py  (+8 more)
(+58 files in other folders)
